[snapdev] Added comprehensive Resources section to plan page with contact info - wrote 1 file(s) + extra files edited outside of Dyad

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,16 @@
 # MongoDB Configuration
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/hocs?retryWrites=true&w=majority
 
 # Application Configuration
-# Add other environment variables as needed
+PORT=8000
+CORS_ORIGINS=http://localhost:5173
+
+# Session Configuration
+SESSION_DURATION_HOURS=24
+
+# Email Configuration (for S3)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+# FROM_EMAIL=your-email@gmail.com
