Update backend: Add CORS middleware and update requirements

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,9 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.1
 motor==3.6.0
 pydantic==2.10.3
+pydantic[email]
 python-dotenv==1.0.1
 pymongo==4.9.1
 reportlab==4.2.5
 resend==2.19.0
-pydantic[email]==2.10.3
+email-validator>=2.0.0
