Fix CORS configuration for production frontend
- Updated backend CORS to allow production frontend URLs
- Added expose_headers to CORS middleware
- Added diagnostic logging to frontend API calls
- Created comprehensive deployment documentation

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,7 @@
 # Backend API URL
+# Development: http://localhost:8000
+# Production: https://hocs-backend.onrender.com
 VITE_API_URL=http://localhost:8000
 
-# Google Places API Key
+# Google Places API Key for address autocomplete
 VITE_GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
